sticky menu integration

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <button class="btn-sign-up">Записаться</button>
       </div>
     </section>
-    <section id="id-about-us" class="about-us pt-section continer">
+    <section id="id-about-us" class="about-us pt-section continer _sect-js">
       <div class="wpapp-section-title _anim-items _anim-no-hide">
         <h3 class="about-us_title section-title">О нашей клинике</h3>
       </div>
@@ -173,7 +173,7 @@
         </div>
       </div>
     </section>
-    <section id="id-services" class="services pt-section continer">
+    <section id="id-services" class="services pt-section continer _sect-js">
       <div class="wpapp-section-title _anim-items _anim-no-hide">
         <h3 class="services_title section-title">Услуги</h3>
       </div>
@@ -261,7 +261,7 @@
       </div>
       <button class="btn-sign-up">Записаться</button>
     </section>
-    <section id="id-stocks" class="stocks pt-section continer">
+    <section id="id-stocks" class="stocks pt-section continer _sect-js">
       <div class="wpapp-section-title _anim-items _anim-no-hide">
         <h3 class="stocks_title section-title">Акции</h3>
       </div>
@@ -380,7 +380,7 @@
         </div>
       </div>
     </section>
-    <section id="id-doctors" class="doctors">
+    <section id="id-doctors" class="doctors _sect-js">
       <div class="wpapp-section-title _anim-items _anim-no-hide">
         <h3 class="doctors_title section-title">наши врачи</h3>
       </div>
@@ -492,7 +492,7 @@
         </div>
       </div>
     </section>
-    <section id="id-coments" class="coments continer pt-section">
+    <section id="id-coments" class="coments continer pt-section _sect-js">
       <div class="wpapp-section-title _anim-items _anim-no-hide">
         <h3 class="coments_title section-title">Отзывы</h3>
       </div>
@@ -562,7 +562,7 @@
         </div>
       </div>
     </section>
-    <section id="id-portfolio" class="portfolio continer pt-section">
+    <section id="id-portfolio" class="portfolio continer pt-section _sect-js">
       <div class="wpapp-section-title _anim-items _anim-no-hide">
         <h3 class="portfolio_title section-title">портфолио</h3>
       </div>
@@ -852,7 +852,7 @@
         </div>
       </div>
     </section>
-    <section id="id-contacts" class="contacts continer pt-section">
+    <section id="id-contacts" class="contacts continer pt-section _sect-js">
       <div class="wpapp-section-title _anim-items _anim-no-hide">
         <h3 class="contacts_title section-title">КОНТАКТЫ</h3>
       </div>
