add forms validation

--- a/index.html
+++ b/index.html
@@ -774,12 +774,12 @@
             <p class="sing-up_text bg-noRepeat">План лечения</p>
           </div>
           <div class="sing-up_form-col">
-            <form class="sing-up_form" action="#">
+            <form class="sing-up_form form-img-loading" action="#">
               <div class="sing-up_input-box">
-                <input class="sing-up_input width-100" type="text" placeholder="Имя*">
+                <input class="sing-up_input width-100" name="userName" type="text" placeholder="Имя*">
               </div>
               <div class="sing-up_input-box">
-                <input class="tel sing-up_input width-100" type="text" placeholder="Телефон*">
+                <input class="tel sing-up_input width-100" name="userPhone" type="text" placeholder="Телефон*">
               </div>
               <button class="btn-sign-up-form">Записаться</button>
               <div class="box-personal-data">
@@ -921,12 +921,12 @@
           <p class="sing-up_text bg-noRepeat">План лечения</p>
         </div>
         <div class="sing-up_form-col">
-          <form class="sing-up_form" action="#">
+          <form class="sing-up_form form-img-loading" action="#">
             <div class="sing-up_input-box">
-              <input class="sing-up_input width-100" type="text" placeholder="Имя*">
+              <input class="sing-up_input width-100" name="userName" type="text" placeholder="Имя*">
             </div>
             <div class="sing-up_input-box">
-              <input class="tel sing-up_input width-100" type="text" placeholder="Телефон*">
+              <input class="tel sing-up_input width-100" name="userPhone" type="text" placeholder="Телефон*">
             </div>
             <button class="btn-sign-up-form">Записаться</button>
             <div class="box-personal-data">
