--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="phone-col">
         <div class="phone df-al-centr">
-          <p class="phone-text"><a class="text-color" href="tel:+7 (495) 991-91-27">+7 (495) 991-91-27</a></p>
+          <p class="phone-text"><a class="text-color" href="tel:+74959919127">+7 (495) 991-91-27</a></p>
           <div class="phone_icon bg-noRepeat"></div>
           <div class="burger">
             <div class="burger-lines"></div>
@@ -271,7 +271,7 @@
         <div class="stocks_slid row">
           <div class="stocks_slid-image-col df-al-centr col-auto">
             <div class="stocks_slid-image-box">
-              <img src="img/img-stocks-one.jpg">
+              <img src="img/img-stocks-one.jpg" alt="#">
             </div>
           </div>
           <div class="stocks_slid-title-col col-auto">
@@ -293,7 +293,7 @@
         <div class="stocks_slid row">
           <div class="stocks_slid-image-col df-al-centr col-auto">
             <div class="stocks_slid-image-box">
-              <img src="img/img-stocks-one.jpg">
+              <img src="img/img-stocks-one.jpg" alt="#">
             </div>
           </div>
           <div class="stocks_slid-title-col col-auto">
@@ -315,7 +315,7 @@
         <div class="stocks_slid row">
           <div class="stocks_slid-image-col df-al-centr col-auto">
             <div class="stocks_slid-image-box">
-              <img src="img/img-stocks-one.jpg">
+              <img src="img/img-stocks-one.jpg" alt="#">
             </div>
           </div>
           <div class="stocks_slid-title-col col-auto">
@@ -337,7 +337,7 @@
         <div class="stocks_slid row">
           <div class="stocks_slid-image-col df-al-centr col-auto">
             <div class="stocks_slid-image-box">
-              <img src="img/img-stocks-one.jpg">
+              <img src="img/img-stocks-one.jpg" alt="#">
             </div>
           </div>
           <div class="stocks_slid-title-col col-auto">
@@ -861,7 +861,7 @@
       <div class="contacts_row row">
         <div class="contacts_col-text flex-auto">
           <p class="contacts_phon">
-            <a class="text-color" href="tel:+7 (495) 991-91-27">+7 (495) 991-91-27</a>
+            <a class="text-color" href="tel:+74959919127">+7 (495) 991-91-27</a>
           </p>
           <p class="contacts_email">client@smartclinik.ru</p>
           <div class="contacts_boxadres">
@@ -891,7 +891,7 @@
          <div class="col-3 footer_contacts">
           <div class="footer_box-PhonEmail">
            <p class="footer_phon">
-            <a class="white-color" href="tel:+7 (495) 991-91-27">+7 (495) 991-91-27</a>
+            <a class="white-color" href="tel:+74959919127">+7 (495) 991-91-27</a>
            </p>
            <p class="footer_email">client@smartclinik.ru</p>
            <div class="footer_icon">
