--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
             </div>
           </div>
           <div class="certificates_slid">
-            <div id="certificates-achi" class="js-slad_box-img certificates_box-img">
+            <div id="certificates-achin" class="js-slad_box-img certificates_box-img">
               <img class="width-100" src="img/certificates-achi.jpg" alt="#">
             </div>
             <div id="certificates-kozlovski" class="js-slad_box-img certificates_box-img certificates_box-img-pt">
@@ -842,7 +842,7 @@
             <div id="certificates-samsung" class="js-slad_box-img certificates_box-img">
               <img class="width-100" src="img/certificates-samsung.jpg" alt="#">
             </div>
-            <div id="certificates-aching" class="js-slad_box-img certificates_box-img certificates_box-img-pt">
+            <div id="certificates-achinng" class="js-slad_box-img certificates_box-img certificates_box-img-pt">
               <img class="width-100" src="img/certificates-aching.jpg" alt="#">
             </div>
           </div>
