--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
             <div id="certificates-achin" class="js-slad_box-img certificates_box-img">
               <img class="width-100" src="img/certificates-achi.jpg" alt="#">
             </div>
-            <div id="certificates-kozlovski" class="js-slad_box-img certificates_box-img certificates_box-img-pt">
+            <div id="certificates-kozlovski2" class="js-slad_box-img certificates_box-img certificates_box-img-pt">
               <img class="width-100" src="img/certificates-kozlovski.jpg" alt="#">
             </div>
           </div>
