--- a/index.html
+++ b/index.html
@@ -834,12 +834,12 @@
             </div>
           </div>
           <div class="certificates_slid">
-            <div id="certificates-burev" class="js-slad_box-img certificates_box-img long-normal">
+            <div id="certificates-burev2" class="js-slad_box-img certificates_box-img long-normal">
               <img class="width-100" src="img/certificates-burev.jpg" alt="#">
             </div>
           </div>
           <div class="certificates_slid">
-            <div id="certificates-samsung" class="js-slad_box-img certificates_box-img">
+            <div id="certificates-samsung2" class="js-slad_box-img certificates_box-img">
               <img class="width-100" src="img/certificates-samsung.jpg" alt="#">
             </div>
             <div id="certificates-achinng" class="js-slad_box-img certificates_box-img certificates_box-img-pt">
@@ -847,7 +847,7 @@
             </div>
           </div>
           <div class="certificates_slid">
-            <div id="certificates-quality" class="js-slad_box-img certificates_box-img long-normal">
+            <div id="certificates-quality2" class="js-slad_box-img certificates_box-img long-normal">
               <img class="width-100" src="img/certificates-quality.jpg" alt="#">
             </div>
           </div>
